# zakljucna_naloga

./: Cargo.toml  README.md  main.typ  metadata.toml  notpad.typ  reactor-testing.py  references.bib  references.typ
R-Scripts/: default.R  feed.R  feed_process.R  fit.R  glucose.R  glutamin.R  mu_max.R  settings.R  vcd.R
data/: Cargo.toml  data-fit.csv  data-fit.json  default.csv  default.json  feed0.csv  feed0.json  feed2.csv  feed2.json  feed4.csv  feed4.json  feed_process0.csv  feed_process0.json  feed_process10.csv  feed_process10.json  feed_process15.csv  feed_process15.json  feed_process5.csv  feed_process5.json  glucose09.csv  glucose09.json  glucose2.csv  glucose2.json  glutamin09.csv  glutamin09.json  glutamin2.csv  glutamin2.json  glutamine09.csv  glutamine09.json  glutamine2.csv  glutamine2.json  model.rs  mu_max1.csv  mu_max1.json  mu_max3.csv  mu_max3.json  mu_max4.csv  mu_max4.json  mu_max6.csv  mu_max6.json  (+4 more)
dispozicija/: dispo.bib  dispozicija.typ
podatki/: data.csv  data.nuon
rproj/: default.R  feed.R  glucose.R  glutamin.R  mu_max.R  vcd.R
src/: additional.typ
src/figures/: bioreactor.typ  mod.typ  monod.typ  neldermead.typ  pid.typ  rk4.typ  simulation.typ
src/sec/: 1uvod.typ  2namen.typ  3metode.typ  4rezultati.typ  5summary.typ  6zaključek.typ
src/sec/uvod/: 1. intro.typ  2. bioreactors.typ  3. num metode.typ  4. bioreactor modeling.typ  5. model.typ
