[package]
name = "bion"
build = "build.rs"
version = "0.1.0"
edition = "2018"
authors = ["Tilen Gimpelj <tilen.gimpelj_ext@novartis.com>"]

[package.metadata.winresource]
OriginalFilename = "bion.exe"
LegalCopyright = "MIT"

[dependencies]
egui = "0.27.0"
egui_plot = "0.27.0"
eframe = { version = "0.27.0", features = ["default"] }
env_logger = { version = "0.11.3", default-features = false, features = [
        "auto-color",
        "humantime", ] }
ode_solvers = {git = "https://github.com/Tiggax/ode-solvers.git", branch = "add-mut-system" }
argmin = "0.10.0"
rfd = "0.14.1"
csv = "1.3.0"
serde = "1.0.204"
serde_json = "1.0.120"

[build-dependencies]
winresource = "0.1"
